- ``Persistence``: persistent keys are now namespaced by an entity_id (e.g. a player fort site ID)
- ``Persistence``: data is now stored one file per entity ID (plus one for the global world) in the DF savegame directory
- ``Units.isDanger``: now returns true for agitated wildlife

## Lua
- ``dfhack.capitalizeStringWords``: new function, returns string with all words capitalized
- ``widgets.Divider``: linear divider to split an existing frame; configurable T-junction edges and frame style matching
- ``dfhack.persistent``: new, table-driven API for easier world- and site-associated persistent storage. See the Lua API docs for details.
- ``dfhack.isSiteLoaded``: returns whether a site (e.g. a player fort) is loaded
- ``dfhack.items``: access to ``canMelt(item)``, ``markForMelting(item)``, and ``cancelMelting(item)`` from ``Items`` module
- ``dfhack.world.getCurrentSite``: returns the ``df.world_site`` instance of the currently loaded fort

## Removed
- ``persist-table``: replaced by new ``dfhack.persistent`` API
- `channel-safely`: (temporarily) removed due to stability issues with the underlying DF API

# 50.11-r4

## Fixes
- `buildingplan`: fix choosing the wrong mechanism (or something that isn't a mechanism) when linking a lever and manually choosing a mechanism, but then canceling the selection
- RemoteServer: don't shut down the socket prematurely, allowing continuing connections from, for example, dfhack-run
- `sort`: fix potential crash when exiting and re-entering a creatures subtab with a search active
- `sort`: prevent keyboard keys from affecting the UI when search is active and multiple keys are hit at once
- `tailor`: fix corner case where existing stock was being ignored, leading to over-ordering

## Misc Improvements
- `buildingplan`: save magma safe mechanisms for when magma safety is requested when linking levers and pressure plates to targets