@@ -107,6 +107,7 @@ Template for new versions:
 - ``Persistence``: persistent keys are now namespaced by an entity_id (e.g. a player fort site ID)
 - ``Persistence``: data is now stored one file per entity ID (plus one for the global world) in the DF savegame directory
 - ``Units.isDanger``: now returns true for agitated wildlife
+- ``Constructions::designateRemove``: no longer designates the non-removable "pseudo" construtions that represent the top of walls
 
 ## Lua
 - ``dfhack.capitalizeStringWords``: new function, returns string with all words capitalized
